--- a/Final Lab Project/index.html
+++ b/Final Lab Project/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
-  <link rel="stylesheet" href="css/_yoga.css">
+  <link rel="stylesheet" href="./css/_yoga.css">
   <link rel="icon" type="images/x-icon" sizes="32x32" href="images/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
